# robotics-project

./: .gitignore  README.md  car.rviz
First_project/Docker_Tests/docker_image_build/Docker/: eval.py
First_project_Information_files/Docker_Tests/docker_image_build/Docker/: Dockerfile  eval.py  ros-entrypoint.sh
First_project_Information_files/Docker_Tests/example_package/: first_project.tar.xz
src/first_project/: CMakeLists.txt  info.txt  package.xml  report.txt
src/first_project/launch/: odom.launch
src/first_project/msg/: Odom.msg
src/first_project/src/: odometry.cpp
